terraform/rds.tf
resource "aws_db_subnet_group" "main_db" {
  name = "${var.project_name}-db-subnet"

  subnet_ids = [
    aws_subnet.private.id,
    aws_subnet.private_2.id
  ]

  tags = {
    Name = "${var.project_name}-db-subnet"
  }
}

resource "aws_db_instance" "postgres" {
  identifier = "${var.project_name}-postgres"

  engine         = "postgres"
  engine_version = "16"

  instance_class      = "db.t3.micro"
  allocated_storage   = 20
  storage_type        = "gp3"
  publicly_accessible = false
  skip_final_snapshot = true
  deletion_protection = false

  db_name  = "appdb"
  username = "dbadmin"
  password = var.db_password

  db_subnet_group_name = aws_db_subnet_group.main_db.name
  vpc_security_group_ids = [
    aws_security_group.rds_sg.id
  ]

  tags = {
    Name = "${var.project_name}-postgres"
  }
}
